# playlink

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  Raport końcowy - IOAD - WIP.docx  docker-compose.yml
.github/workflows/: ci.yml  cicd.yml
backend/: Dockerfile  README.md  database.py  entrypoint.sh  main.py  models.py  pyproject.toml  requirements.txt  usernames.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  17b0946aadca_add_room_metadata.py  4fb1ffbfc7d9_add_room_event_and_rsvp.py  a1b2c3d4e5f6_add_message.py  b7e2c1f4d8a3_add_event_ends_at.py  f273b29c941a_initial.py
backend/docs/: auth-flow.md
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_chat.py  test_room_events.py  test_rooms.py  test_users.py
docs/superpowers/specs/: 2026-05-29-username-editing-design.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: app.d.ts  hooks.server.ts
frontend/src/lib/: Counter.svelte  auth.ts  chatStore.ts  global.css  hintsContext.svelte.ts  roomsStore.js  roomsStore.ts
frontend/src/lib/components/: GameManager.svelte  MnemonicInput.svelte  RoomEvent.svelte
frontend/src/lib/styles/: chrome.css  tokens.css
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/auth/: +page.server.js  +page.server.ts  +page.svelte
frontend/src/routes/profile/: +page.server.ts  +page.svelte
frontend/src/routes/rooms/: +page.server.ts  (+1 more)
frontend/static/cursor/: help.cur  normal.cur  readme.txt  write.cur
prezentacje/prezentacja1/: prezentacja.tex
prezentacje/prezentacja_1/: prezentacja.tex
(+21 files in other folders)
